--- a/other_materials/Netman/dockerfile-example/Dockerfile
+++ b/other_materials/Netman/dockerfile-example/Dockerfile
@@ -1,1 +1,4 @@
-../Dockerfiles/scratch/Dockerfile_v2
+FROM scratch
+ADD files/alpine-minirootfs-3.6.1-x86_64.tar /
+COPY files/2.txt /2.txt
+CMD ["/bin/sh"]
