--- a/other_materials/ydli/example-file/kuard-pod-reslim.yaml
+++ b/other_materials/ydli/example-file/kuard-pod-reslim.yaml
@@ -6,7 +6,7 @@ spec:
   containers:
     - image: ydli/kuard:latest
       name: kuard
-      resource:
+      resources:
         requests:
           cpu: "500m"
           memory: "128Mi"
