--- a/other_materials/ydli/example-file/kuard-pod-nfs.yaml
+++ b/other_materials/ydli/example-file/kuard-pod-nfs.yaml
@@ -3,13 +3,17 @@ kind: Pod
 metadata:
   name: kuard
 spec:
+  volumes:
+    - name: "kuard-data"
+      nfs:
+        server: my.nfs.server.local
+        path: "/exports"
   containers:
     - image: ydli/kuard:latest
       name: kuard
-      resources:
-        requests:
-          cpu: "500m"
-          memory: "128Mi"
+      volumeMounts:
+        - mountPath: "/data"
+          name: "kuard-data"
       ports:
         - containerPort: 8080
           name: http
